--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,8 @@
   font-family: "Regular";
   src: url("../fonts/Roboto-Regular.ttf"); }
 .navbar {
-  margin-top: 40px; }
+  margin-top: 40px;
+  padding-bottom: 0; }
   .navbar .navbar-nav {
     margin-right: 0;
     margin-left: auto;
@@ -19,7 +20,8 @@
         border: none !important;
         background-color: rgba(0, 0, 0, 0.5);
         padding: 0;
-        border-radius: 0px; }
+        border-radius: 0px;
+        margin-top: 0; }
         .navbar .navbar-nav .nav-item .dropdown-menu .dropdown-item {
           font-family: "Regular";
           font-size: 12px;
@@ -99,5 +101,11 @@
   -ms-border-radius: 1px;
   border-radius: 1px;
   margin: 4.5px 0; }
+
+.slide-lp {
+  padding: 0 !important; }
+
+.carousel-item img {
+  width: 100%; }
 
 /*# sourceMappingURL=index.css.map */
