Ajustando detalles de diseño

--- a/css/fotografia.css
+++ b/css/fotografia.css
@@ -320,9 +320,21 @@ a.item-footer {
 
 .titulo,
 .texto {
-  padding-left: 50px; }
+  padding-left: 50px;
+  padding-right: 100px; }
+  @media (max-width: 991px) {
+    .titulo,
+    .texto {
+      padding-left: 15px !important;
+      padding-right: 15px !important; } }
 
+@media (max-width: 991px) {
+  .titulo {
+    font-size: 24px; }
+
+  .texto {
+    font-size: 12px; } }
 .titulo {
   margin-bottom: 10px; }
 
-/*# sourceMappingURL=huevo.css.map */
+/*# sourceMappingURL=fotografia.css.map */
