--- a/css/huevo.css
+++ b/css/huevo.css
@@ -153,13 +153,16 @@
 
 .lang-container {
   margin-top: 10px; }
+  .lang-container .ml-auto {
+    padding-right: 21px; }
 
 .lang {
   background-color: #fff;
   border: none;
   font-family: "Regular";
   font-size: 12px;
-  color: #959494; }
+  color: #959494;
+  padding: 0; }
 
 button.lang {
   cursor: pointer;
@@ -321,6 +324,10 @@ a.item-footer {
 .titulo,
 .texto {
   padding-left: 50px; }
+  @media (max-width: 991px) {
+    .titulo,
+    .texto {
+      padding-left: 15px; } }
 
 .titulo {
   margin-bottom: 10px; }
