--- a/css/index.css
+++ b/css/index.css
@@ -153,13 +153,16 @@
 
 .lang-container {
   margin-top: 10px; }
+  .lang-container .ml-auto {
+    padding-right: 21px; }
 
 .lang {
   background-color: #fff;
   border: none;
   font-family: "Regular";
   font-size: 12px;
-  color: #959494; }
+  color: #959494;
+  padding: 0; }
 
 button.lang {
   cursor: pointer;
@@ -313,10 +316,14 @@ a.item-footer {
 .slide-lp {
   padding: 0 !important; }
 
-.carousel-item img {
+.carousel-item img, .flexslider img {
   width: 100%; }
-.carousel-item h4, .carousel-item p {
+.carousel-item h4, .carousel-item p, .flexslider h4, .flexslider p {
   font-family: "Regular"; }
+
+.flexslider {
+  border: none !important;
+  margin: 0 !important; }
 
 .videos {
   margin-top: 5px;
@@ -328,8 +335,9 @@ a.item-footer {
       .videos div {
         float: none;
         width: 100%; } }
-    .videos div img {
+    .videos div img, .videos div video {
       width: 100%;
+      height: 100%;
       z-index: 2 !important; }
   .videos .video1, .videos .video2, .videos .video3, .videos .video4 {
     position: relative;
@@ -340,16 +348,15 @@ a.item-footer {
       .videos .video1, .videos .video3 {
         margin-right: 0;
         margin-bottom: 5px; } }
-  .videos .video1, .videos .video2 {
-    margin-bottom: 5px; }
 
 .video1:hover > .noticia,
 .video2:hover > .noticia,
 .video3:hover > .noticia,
 .video4:hover > .noticia {
+  height: calc(100% - 5px);
   visibility: visible;
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, 0.8); }
 
 .noticia {
   position: absolute;
@@ -358,12 +365,15 @@ a.item-footer {
   height: 100%;
   z-index: 1000;
   width: 100% !important;
-  padding: 80px 50px;
-  text-align: center;
+  padding: 104px 80px 104px 80px;
+  text-align: left;
   visibility: hidden;
   transition: all 0.2s ease !important; }
+  .noticia .titulo {
+    margin-bottom: 15px; }
   .noticia .titulo, .noticia .texto {
-    color: #fff; }
+    color: #fff;
+    padding: 0; }
   @media (max-width: 991px) {
     .noticia {
       padding: 15px; }
