--- a/css/index.css
+++ b/css/index.css
@@ -142,9 +142,9 @@
     .navbar a.ghmLogo:hover {
       text-decoration: none !important; }
 
-.dropdown:hover > .dropdown-menu {
-  display: block; }
-
+@media (min-width: 992px) {
+  .dropdown:hover > .dropdown-menu {
+    display: block; } }
 .dropdown-menu.ultimo.show {
   min-width: 0 !important; }
   @media (max-width: 1090px) {
@@ -352,7 +352,8 @@ a.item-footer {
       z-index: 2 !important; }
   .videos .video1, .videos .video2, .videos .video3, .videos .video4 {
     position: relative;
-    cursor: pointer; }
+    cursor: pointer;
+    height: 100%; }
   .videos .video1, .videos .video3 {
     margin-right: 5px; }
     @media (max-width: 991px) {
@@ -372,10 +373,10 @@ a.item-footer {
   position: absolute;
   overflow: hidden;
   top: 0;
-  height: 100%;
+  height: calc(100% - 7px);
   z-index: 1000;
   width: 100% !important;
-  padding: 104px 80px 104px 80px;
+  padding: 105px 80px 100px 80px;
   text-align: left;
   visibility: hidden;
   transition: all 0.2s ease !important; }
@@ -386,7 +387,7 @@ a.item-footer {
     padding: 0; }
   @media (max-width: 991px) {
     .noticia {
-      padding: 104px 80px 104px 80px;
+      padding: 54px 20px;
       text-align: center; }
       .noticia .titulo {
         font-size: 24px;
