--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -77,8 +77,10 @@
 		height: calc(100% - 7px)
 		z-index: 1000
 		width: 100% !important
-		padding: 105px 80px 100px 80px
-		text-align: center
+		// padding: 105px 80px 100px 80px
+		padding-left: 80px
+		padding-right: 80px
+		text-align: left
 		visibility: hidden
 		transition: all 0.2s ease !important
 		.titulo
