--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -53,7 +53,7 @@
 				@media (max-width: 991px)
 					background-color: #fff !important
 				.dropdown-item
-					font-family: $regular
+					font-family: $light
 					font-size: $FFmenu
 					color: $gris
 					padding: 12px 20px 12px 0
@@ -106,12 +106,14 @@
 	font-size: $FFmenu
 	color: $gris
 	padding: 0
-button.lang
+a.lang
 	cursor: pointer
 	outline: none
-button.lang.active
+	&:hover
+		text-decoration: none
+		color: $gris
+a.lang.active
 	color: $grisOscuro
-
 
 
 // --- BOTÓN DEL MENÚ --- //
