--- a/css/estilos.css
+++ b/css/estilos.css
@@ -98,7 +98,8 @@
     font-size: 12px; }
     @media (max-width: 991px) {
       .navbar .navbar-nav {
-        border-top: 1px solid #585756; } }
+        border-top: 1px solid #585756;
+        margin-top: 30px; } }
     .navbar .navbar-nav .nav-item {
       margin-left: 15px; }
       @media (max-width: 991px) {
@@ -107,12 +108,14 @@
           border-bottom: 1px solid #585756;
           padding-top: 10px;
           padding-bottom: 10px;
-          vertical-align: middle; } }
+          vertical-align: middle; }
+          .navbar .navbar-nav .nav-item:last-child {
+            border-bottom: 2px solid #585756; } }
       .navbar .navbar-nav .nav-item .nav-link {
         padding: 8px 8px 8px 15px; }
         .navbar .navbar-nav .nav-item .nav-link .closeNav {
           display: inline-block;
-          right: 10px;
+          right: 8px;
           top: 14px;
           position: absolute;
           font-size: 18px;
@@ -139,7 +142,7 @@
           font-family: "Light";
           font-size: 12px;
           color: #959494;
-          padding: 12px 20px 12px 0;
+          padding: 12px 35px 12px 0;
           border-bottom: 1px solid #959494; }
           .navbar .navbar-nav .nav-item .dropdown-menu .dropdown-item:hover {
             color: #585756;
@@ -213,47 +216,36 @@ a.lang.active {
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -transform: rotate(0deg);
-  -webkit-transition: 0.25s ease-in-out;
-  -moz-transition: 0.25s ease-in-out;
-  -ms-transition: 0.25s ease-in-out;
-  -transition: 0.25s ease-in-out; }
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -ms-transition: 0.5s ease-in-out;
+  -transition: 0.5s ease-in-out; }
 
 .nav-icon span:nth-child(1) {
   top: 0px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -ms-transform-origin: left center;
-  -transform-origin: left center; }
+  -webkit-transform-origin: center center;
+  -moz-transform-origin: center center;
+  -ms-transform-origin: center center;
+  -transform-origin: center center; }
 
 .nav-icon span:nth-child(2) {
-  top: 18px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -ms-transform-origin: left center;
-  -transform-origin: left center; }
-
-.nav-icon span:nth-child(3) {
-  top: 36px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -ms-transform-origin: left center;
-  -transform-origin: left center; }
+  top: 100%;
+  -webkit-transform-origin: center center;
+  -moz-transform-origin: center center;
+  -ms-transform-origin: center center;
+  -transform-origin: center center; }
 
 .nav-icon.open span:nth-child(1) {
-  -webkit-transform: rotate(35deg);
-  -moz-transform: rotate(35deg);
-  -ms-transform: rotate(35deg);
-  -transform: rotate(35deg); }
+  -webkit-transform: translateY(100%) rotate(135deg);
+  -moz-transform: translateY(100%) rotate(135deg);
+  -ms-transform: translateY(100%) rotate(135deg);
+  -transform: translateY(100%) rotate(135deg); }
 
 .nav-icon.open span:nth-child(2) {
-  width: 0%;
-  opacity: 0; }
-
-.nav-icon.open span:nth-child(3) {
-  -webkit-transform: rotate(-35deg);
-  -moz-transform: rotate(-35deg);
-  -ms-transform: rotate(-35deg);
-  -transform: rotate(-35deg); }
+  -webkit-transform: translateY(-200%) rotate(45deg);
+  -moz-transform: translateY(-200%) rotate(45deg);
+  -ms-transform: translateY(-200%) rotate(45deg);
+  -transform: translateY(-200%) rotate(45deg); }
 
 .icon-bar {
   background-color: #959494;
@@ -380,8 +372,10 @@ a.lang.active {
 .index .index.intro .texto {
   padding: 0 30px; }
 .index .huevo {
-  background-color: #f2f2f2;
-  padding: 95px 0; }
+  background-color: #f2f2f2; }
+  @media (max-width: 991px) {
+    .index .huevo {
+      padding: 95px 0; } }
   .index .huevo .row {
     margin-right: 0;
     margin-left: 0; }
