--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -77,7 +77,6 @@
 		height: calc(100% - 7px)
 		z-index: 1000
 		width: 100% !important
-		// padding: 105px 80px 100px 80px
 		padding-left: 80px
 		padding-right: 80px
 		text-align: left
@@ -112,7 +111,8 @@
 	// --- HUEVO --- //
 	.huevo
 		background-color: #f2f2f2
-		padding: 95px 0
+		@media (max-width: 991px)
+			padding: 95px 0
 		.row
 			margin-right: 0
 			margin-left: 0
