--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -17,6 +17,7 @@ footer
 	padding: 0
 	list-style-type: none !important
 .lista-footer.redes
+	margin-top: 10px
 	a
 		font-size: 24px
 		color: #fff
@@ -28,12 +29,44 @@ footer
 .titulo-footer
 	font-family: $medium
 	color: #fff
+	cursor: default
+	display: block
+	margin-bottom: 8px
+	position: relative
+	&:hover
+		color: #fff
+		text-decoration: none
+		cursor: default
+	@media (max-width: 991px)
+		margin-bottom: 0px
+		padding: 10px 0 10px 5px
+	.closeNav
+		display: inline-block
+		right: 5px
+		top: 5px
+		position: absolute
+		font-size: 18px
+		+transform-origin(center center)
+		+transition(.25s ease-in-out)
+	.closeNav.open
+		+transform(rotate(45deg))
 
+.titulo-footer.border-top
+	border:none
+	@media (max-width: 991px)
+		border-top: 1px solid #fff
+div.class-aux.border-top
+	border:none
+	@media (max-width: 991px)
+		border-top: 1px solid #fff
+		height: 1px
+		
 li.item-footer
 	font-family: $light
 	font-size: $FStexto
 	color: #fff
-
+	@media (max-width: 991px)
+		padding-left: 8px
 
 a.item-footer
 	text-decoration: none
@@ -41,14 +74,20 @@ a.item-footer
 	font-size: $FStexto
 	color: #fff
 	margin: 2px 0
-	// display: inline-block
 	&:hover
 		color: $gris
 		text-decoration: none
+	@media (max-width: 991px)
+		padding-left: 8px
 
-.logoHuevo:hover
-	text-decoration: none !important
-	
+footer
+	.logoHuevo-container
+		@media (max-width: 991px)
+			margin-top: 75px
+	.logoHuevo
+		&:hover
+			text-decoration: none !important
+		
 .icon-logoHuevo
 	font-size: 42px
 
